Updated properties file

--- a/src/main/resources/dom-analise.properties
+++ b/src/main/resources/dom-analise.properties
@@ -3,10 +3,10 @@ dom-analise.candidates=4
 dom-analise.language=en
 dom-analise.type=all
 
-dom-analise.url=http://www.tomshardware.com/
+dom-analise.url=http://url.to.site.home.page/
+# like: http://www.tomshardware.com/
 dom-analise.threads=20
 dom-analise.sources-depth=2
-#http://www.tomshardware.com/
 
 dom-analise.transitive=true
 
